--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "built/index.d.ts",
   "scripts": {
     "prepare": "tsc",
+    "lint": "eslint -c .eslintrc.js index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,8 +20,8 @@
   },
   "homepage": "https://github.com/KnorpelSenf/telegraf-session-firestore#readme",
   "devDependencies": {
-    "@google-cloud/firestore": "^4.8.0",
-    "telegraf": "^3.38.0",
+    "@google-cloud/firestore": "^4.8.1",
+    "telegraf": "^4.0.0",
     "typescript": "^4.1.3"
   },
   "keywords": [
