--- a/package.json
+++ b/package.json
@@ -1,34 +1,41 @@
 {
-  "name": "telegraf-session-firestore",
-  "version": "3.1.4",
-  "description": "Google Firestore based session middleware for telegraf.js",
-  "main": "built/index.js",
-  "types": "built/index.d.ts",
-  "scripts": {
-    "prepare": "tsc",
-    "lint": "eslint -c .eslintrc.js index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/KnorpelSenf/telegraf-session-firestore.git"
-  },
-  "author": "Steffen Trog",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/KnorpelSenf/telegraf-session-firestore/issues"
-  },
-  "homepage": "https://github.com/KnorpelSenf/telegraf-session-firestore#readme",
-  "devDependencies": {
-    "@google-cloud/firestore": "^4.8.1",
-    "telegraf": "^4.0.0",
-    "typescript": "^4.1.3"
-  },
-  "keywords": [
-    "telegram",
-    "telegraf",
-    "session",
-    "middleware",
-    "firestore"
-  ]
+    "name": "telegraf-session-firestore",
+    "version": "3.1.4",
+    "description": "Google Firestore based session middleware for telegraf.js",
+    "main": "built/index.js",
+    "types": "built/index.d.ts",
+    "scripts": {
+        "prepare": "tsc",
+        "lint": "eslint -c .eslintrc.js index.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/KnorpelSenf/telegraf-session-firestore.git"
+    },
+    "author": "Steffen Trog",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/KnorpelSenf/telegraf-session-firestore/issues"
+    },
+    "homepage": "https://github.com/KnorpelSenf/telegraf-session-firestore#readme",
+    "devDependencies": {
+        "@google-cloud/firestore": "^4.8.1",
+        "telegraf": "^4.0.0",
+        "@typescript-eslint/eslint-plugin": "^4.12.0",
+        "@typescript-eslint/parser": "^4.12.0",
+        "eslint": "^7.17.0",
+        "eslint-config-prettier": "^7.1.0",
+        "eslint-config-typescript": "^3.0.0",
+        "eslint-plugin-prettier": "^3.3.1",
+        "prettier": "^2.2.1",
+        "typescript": "^4.1.3"
+    },
+    "keywords": [
+        "telegram",
+        "telegraf",
+        "session",
+        "middleware",
+        "firestore"
+    ]
 }
